# VitaToolBox

./: CMakeLists.txt  README.md
Additional Files/: french.ini
pkg/sce_sys/livearea/contents/: template.xml
resources/: bg_selecttheme.png.orig  changeinfo.txt  colors.ini  english_us.ini  param.ini  settings.ini
src/: audioplayer.c  config.c  config.h  database.c  database.h  init.c  language.c  language.h  main.c  main.h  package_installer.c  plugins_manager.c  plugins_manager.h  settings.c  settings.h  theme.c  theme.h  utils.c  utils.h  vitaident.c  vitaident.h  vitashell_config.h
src/pluginsmanager/: configs.c  plugins.c
src/updater/: Makefile  main.c
src/vitaident/: app.c  app.h  fs.c  fs.h  kernel.c  kernel.h  net.c  net.h  power.c  power.h  utils.c  utils.h
